# BioShields

./: .env.base  .env.devnet  .env.temp  .eslintrc.json  .gitignore  .prettierignore  .vercelignore  BIOSHIELD_COMPLETE_DEPLOYMENT.md  BioShields.code-workspace  CONTRACT_ERROR_FIXES.md  CSS_FIXES.md  DASHBOARD_FIXES.md  DEMO_ERROR_HANDLING.md  DEMO_FUNCTIONAL_SUMMARY.md  DEMO_IMPLEMENTATION_COMPLETE.md  DEMO_INTERACTIVA_README.md  DEMO_README.md  DEPLOYMENT_GUIDE.md  DEPLOY_SUCCESS.md  ERROR_FIXES.md  ERROR_FIXES_SUMMARY.md  FINAL_DEPLOYMENT_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  METAMASK_ERROR_FIX.md  MOBILE_FIX.md  MULTICHAIN_CONFIG.md  MULTICHAIN_DEPLOYMENT_SUCCESS.md  NEXT_STEPS_IMPLEMENTATION.md  OPTIMISM_DEPLOYMENT_SUCCESS.md  OPTIMISM_FIX.md  README.md  REOWN_FIXED.md  REOWN_IMPLEMENTATION_COMPLETE.md  REOWN_MIGRATION.md  RPC_ERROR_SOLUTION.md  SEPTEMBER_2025_CHANGELOG.md  SOLANA_DEPLOYMENT_MANUAL.md  SOLANA_INTEGRATION_SETUP.md  SOLANA_TESTNET_CONFIG.md  (+56 more)
rust/programs/bioshield-insurance/: Cargo.toml
rust/programs/bioshield-insurance/src/: events.rs  lib.rs  lib.rs.bak
rust/programs/bioshield-insurance/src/errors/: error.rs
rust/programs/bioshield-insurance/src/instructions/: add_liquidity.rs  create_coverage.rs  initialize_pool.rs  mod.rs  process_payout.rs  remove_liquidity.rs  submit_claim.rs  update_oracle.rs
rust/programs/bioshield-insurance/src/oracles/: bioscience_oracle.rs  mod.rs  pyth_oracle.rs  switchboard_oracle.rs
rust/programs/bioshield-insurance/src/state/: claim.rs  coverage_account.rs  insurance_pool.rs  mod.rs  (+1 more)
(+164 files in other folders)
