[package]
name = "bioshield-insurance"
version = "0.1.0"
description = "BioShield Insurance - Solana Program for Parametric Insurance"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bioshield_insurance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "2.0.14"
solana-program-test = "2.0.14"
solana-sdk = "2.0.14"
spl-token = "4.0.0"
spl-associated-token-account = "2.2.0"

# Oracle dependencies for Solana (September 2025)
pyth-solana-receiver-sdk = "0.5.2"
switchboard-v2 = "0.7.1"

# Utility dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.10.3"
thiserror = "1.0"

# Math and calculations
rust_decimal = { version = "1.0", features = ["serde-with-str"] }
num-traits = "0.2"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }
